[gd_scene load_steps=10 format=3 uid="uid://ckoalqga84e6a"]

[ext_resource type="Texture2D" uid="uid://feo8046rfu0v" path="res://Assets/enemies.png" id="1_0w6f8"]
[ext_resource type="Script" path="res://Scripts/cat_alien.gd" id="1_5o6j6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_c0kjw"]
radius = 18.0
height = 46.0

[sub_resource type="AtlasTexture" id="AtlasTexture_2dahj"]
atlas = ExtResource("1_0w6f8")
region = Rect2(0, 0, 128, 129)

[sub_resource type="AtlasTexture" id="AtlasTexture_si51w"]
atlas = ExtResource("1_0w6f8")
region = Rect2(0, 258, 128, 129)

[sub_resource type="SpriteFrames" id="SpriteFrames_lwchf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dahj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_si51w")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_qe3xj"]
radius = 187.003

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hsor0"]
radius = 12.0
height = 44.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_b3joe"]
radius = 22.0
height = 48.0

[node name="cat_alien" type="CharacterBody2D"]
script = ExtResource("1_5o6j6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 2)
shape = SubResource("CapsuleShape2D_c0kjw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, 1)
scale = Vector2(0.631588, 0.564092)
sprite_frames = SubResource("SpriteFrames_lwchf")
animation = &"idle"

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_qe3xj")

[node name="PlayerDeath" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDeath"]
position = Vector2(3, -6)
shape = SubResource("CapsuleShape2D_hsor0")

[node name="PlayerCollision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCollision"]
position = Vector2(3, 4)
shape = SubResource("CapsuleShape2D_b3joe")

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="PlayerDeath" to="." method="_on_player_death_body_entered"]
[connection signal="body_entered" from="PlayerCollision" to="." method="_on_player_collision_body_entered"]
